[project]
name = "cpf-censoring"
version = "0.1.0"
description = "Este projeto tem como objetivo processar arquivos PDF e censurar os CPFs encontrados neles."
authors = [
    {name = "Yan Samuray",email = "yansamuray@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
